Enable MessageV2 API to fix sorting and paging issues
Update dependencies